--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
+    "bootflat": "^2.0.4",
     "express-react-views": "^0.10.2",
+    "fetch-ie8": "^1.5.0",
     "lint-staged": "^3.4.0",
     "pre-commit": "^1.2.2",
     "prettier-standard": "^1.0.6",
