--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-    "presets": ["latest", "stage-0", "react"]
+    "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+    ],
+    "plugins": [
+        [
+            "transform-runtime",
+            {
+                "helpers": false,
+                "polyfill": false,
+                "regenerator": true,
+                "moduleName": "babel-runtime"
+            }
+        ]
+    ]
 }
