--- a/package.json
+++ b/package.json
@@ -38,15 +38,19 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
+    "body-parser": "^1.17.1",
     "bootflat": "^2.0.4",
     "express-react-views": "^0.10.2",
     "fetch-ie8": "^1.5.0",
     "lint-staged": "^3.4.0",
+    "mongodb": "^2.2.26",
+    "multer": "^1.3.0",
     "pre-commit": "^1.2.2",
     "prettier-standard": "^1.0.6",
     "react": "^15.4.2",
